--- a/app/src/main/res/layout/activity_login__form.xml
+++ b/app/src/main/res/layout/activity_login__form.xml
@@ -62,6 +62,7 @@
                     style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                     android:layout_width="369dp"
                     android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_action_user"
                     android:hint="Correo electronico"
                     android:inputType="textEmailSubject" />
 
@@ -79,6 +80,7 @@
                     style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                     android:layout_width="369dp"
                     android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_action_password"
                     android:hint="Contraseña"
                     android:inputType="textPassword" />
 
@@ -88,21 +90,23 @@
                 android:textColor="@color/colorWhite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorRed"
+                android:background="@drawable/boton_redondo"
                 android:onClick="Logeo"
-                android:paddingBottom="25dp"
+                android:paddingBottom="10dp"
                 android:text="Aceptar"
                 android:textStyle="bold"
                  />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal"
                 android:layout_gravity="center">
                 <Button
                     style="@style/Widget.AppCompat.Light.ActionButton.Overflow"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/boton_2"
                     android:text="Olvide mi contraseña"
                     />
                 <LinearLayout
@@ -118,6 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="crearCuenta"
+                    android:background="@drawable/boton_2"
                     android:text="Crear una Cuenta" />
 
             </LinearLayout>
