--- a/app/src/main/res/drawable-anydpi/ic_action_forum.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_forum.xml
@@ -8,7 +8,7 @@
   <group android:translateX="3.6"
       android:translateY="3.6">
       <path
-          android:fillColor="#D82721"
-          android:pathData="M20,4L4,4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,6c0,-1.1 -0.9,-2 -2,-2zM20,8l-8,5 -8,-5L4,6l8,5 8,-5v2z"/>
+          android:fillColor="#FF000000"
+          android:pathData="M21,6h-2v9L6,15v2c0,0.55 0.45,1 1,1h11l4,4L22,7c0,-0.55 -0.45,-1 -1,-1zM17,12L17,3c0,-0.55 -0.45,-1 -1,-1L3,2c-0.55,0 -1,0.45 -1,1v14l4,-4h10c0.55,0 1,-0.45 1,-1z"/>
   </group>
 </vector>
