--- a/app/src/main/res/layout/cuadrodialogotipodecuenta.xml
+++ b/app/src/main/res/layout/cuadrodialogotipodecuenta.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:background="@drawable/bg_cuadrocuenta"
    >
     <LinearLayout
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+
         android:gravity="center"
-        android:layout_marginLeft="50dp">
+        android:padding="10dp"
+
+      >
 
         <Button
             android:id="@+id/tipoPasajero"
@@ -18,7 +22,7 @@
             android:layout_height="wrap_content"
             android:text="Pasajero"
             android:padding="8dp"
-            android:background="@drawable/bg_round"
+            android:background="@drawable/btn_cuadro_login"
             android:textStyle="bold"
             android:textSize="20dp"
             android:drawableLeft="@drawable/iconopasajero"
@@ -33,7 +37,7 @@
             android:textStyle="bold"
             android:textSize="20dp"
             android:padding="8dp"
-            android:background="@drawable/bg_round"
+            android:background="@drawable/btn_cuadro_login"
             android:layout_marginTop="5dp"
             android:drawableLeft="@drawable/iconoconductor"
             android:text="Conductor"
@@ -44,14 +48,15 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:background="@drawable/bg_round"
+            android:background="@drawable/btn_cuadro_login"
             android:textStyle="bold"
             android:textSize="20dp"
             android:layout_margin="5dp"
             android:layout_marginTop="10dp"
             android:onClick="registroPropietario"
             android:drawableLeft="@drawable/iconopropietario"
-            android:text="Propietario"/>
+            android:text="Propietario"
+           />
     </LinearLayout>
 
 </RelativeLayout>
