Agregue el menu (en conductor login)y unos fondos de prueba.
Mapas de Rutas Ahuacha y Metapan

Cuadros de dialogo personalizados

Enlaze a Pefil Pasajero

--- a/app/src/main/res/layout/activity_inicio_pasajero.xml
+++ b/app/src/main/res/layout/activity_inicio_pasajero.xml
@@ -29,7 +29,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
-                <ImageView
+                <ImageButton
+                    android:id="@+id/btnPasajeroUnidades"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
@@ -71,7 +72,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
-                <ImageView
+                <ImageButton
+                    android:id="@+id/btnPasajeroFavoritos"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
@@ -123,7 +125,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
-                <ImageView
+                <ImageButton
+                    android:id="@+id/btnPasajeroBuscarUnidades"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
@@ -165,7 +168,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
-                <ImageView
+                <ImageButton
+                    android:id="@+id/btnPasajeroPerfil"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
@@ -219,7 +223,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
-                <ImageView
+                <ImageButton
+                    android:id="@+id/btnPasajeroConfig"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
@@ -261,7 +266,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
-                <ImageView
+                <ImageButton
+                    android:id="@+id/btnPasajeroSalir"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundred"
@@ -283,7 +289,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Salir de la aplicacion"
+                    android:text="Cerrar Sesion"
                     android:padding="5dp"
                     android:textColor="#000"/>
             </LinearLayout>
