--- a/app/src/main/res/layout/activity_registro_propietario.xml
+++ b/app/src/main/res/layout/activity_registro_propietario.xml
@@ -148,10 +148,10 @@
                             android:layout_marginTop="20dp"
                             android:layout_marginBottom="15dp"
                             android:text="REGISTRARME"
-                            android:background="@drawable/boton_redondo"
+                            android:background="@drawable/btn_uno_login"
                             android:shadowColor="@color/gris"
                             android:outlineAmbientShadowColor="@color/gris"
-                            android:textColor="@color/colorWhite"
+                            android:textColor="@drawable/txt_btn_uno_login"
                             android:foreground="?attr/selectableItemBackgroundBorderless"
                             android:onClick="RegistrarmePropietario"
                             />
