--- a/app/src/main/res/layout/cuadrodialogotipodecuenta.xml
+++ b/app/src/main/res/layout/cuadrodialogotipodecuenta.xml
@@ -3,17 +3,17 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/bg_cuadrocuenta"
+    android:orientation="vertical"
+    android:background="@drawable/btn_cuadro_login"
    >
     <LinearLayout
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-
-        android:gravity="center"
         android:padding="10dp"
-
+        android:layout_marginLeft="50dp"
+        android:gravity="center"
       >
 
         <Button
