--- a/app/src/main/res/drawable/boton_redondo.xml
+++ b/app/src/main/res/drawable/boton_redondo.xml
@@ -3,5 +3,5 @@
 
     <solid android:color="#F44336"></solid>
     <corners android:radius="10dp"></corners>
-    <stroke android:color="#000" android:width="2dp"></stroke>
+    <stroke android:color="@color/colorRed" android:width="2dp"></stroke>
 </shape>
