--- a/app/src/main/res/layout/activity_perfil_pasajero.xml
+++ b/app/src/main/res/layout/activity_perfil_pasajero.xml
@@ -61,6 +61,7 @@
                                     android:layout_width="300dp"
                                     android:layout_height="40dp"
                                     android:layout_gravity="center"
+                                    android:hint="Nombre"
                                     android:id="@+id/etCambioNombresPasajero"
                                     android:enabled="false"
                                     android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
@@ -77,7 +78,8 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
                                     android:id="@+id/etCambioApellidosPasajero"
-                                    android:enabled="true"
+                                    android:enabled="false"
+                                    android:hint="Apellido"
                                     android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                                     />
                             </com.google.android.material.textfield.TextInputLayout>
@@ -90,7 +92,8 @@
                                     android:layout_height="wrap_content"
                                     android:id="@+id/etCambioCorreoPasajero"
                                     android:theme="@style/Widget.AppCompat.EditText"
-                                    android:enabled="true"
+                                    android:enabled="false"
+                                    android:hint="Correo electronico(no editable)"
                                     android:inputType="textEmailAddress" />
                             </com.google.android.material.textfield.TextInputLayout>
 
@@ -102,7 +105,8 @@
                                     android:layout_height="wrap_content"
                                     android:id="@+id/etCambiopasswordPasajero"
                                     android:theme="@style/Widget.AppCompat.EditText"
-                                    android:enabled="true"
+                                    android:enabled="false"
+                                    android:hint="Contraseña"
                                     android:inputType="textPassword" />
                             </com.google.android.material.textfield.TextInputLayout>
 
@@ -114,7 +118,8 @@
                                     android:layout_width="300dp"
                                     android:layout_height="wrap_content"
                                     android:id="@+id/etCambiopassword2Pasajero"
-                                    android:enabled="true"
+                                    android:enabled="false"
+                                    android:hint="Repita su contraseña"
                                     android:inputType="textPassword"
                                     android:visibility="invisible"/>
                             </com.google.android.material.textfield.TextInputLayout>
@@ -129,7 +134,7 @@
                                 android:layout_height="30dp"
                                 android:layout_marginTop="20dp"
                                 android:layout_marginBottom="15dp"
-                                android:text="GUARDAR PERFIL"
+                                android:text="EDITAR PERFIL"
                                 android:background="@drawable/btn_uno_login"
                                 android:textColor="@drawable/txt_btn_uno_login"
                                 android:shadowColor="@color/gris"
