--- a/app/src/main/res/layout/activity_inicio_pasajero.xml
+++ b/app/src/main/res/layout/activity_inicio_pasajero.xml
@@ -37,6 +37,7 @@
                     android:src="@drawable/ic_unidad_24dp"
                     android:padding="10dp" />
                 <TextView
+                    android:id="@+id/txtApellidoPrueba"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
